--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Django==4.1.4
 django-crispy-forms==1.14.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pytz==2022.6
 sqlparse==0.4.3
 tzdata==2022.7
